fix: fixed collapsing header on MCP page

--- a/src/frontend/main-ui/src/components/header/Header.scss
+++ b/src/frontend/main-ui/src/components/header/Header.scss
@@ -3,8 +3,8 @@
 	--tw-bg-opacity: 1;
 	background-color: rgb(51 65 85 / var(--tw-bg-opacity));
 
-	& > div {
-		height: 100%;
+	&>div {
+		height: 2.5rem;
 		display: flex;
 		justify-content: space-between;
 
@@ -12,7 +12,7 @@
 			height: 100%;
 			display: flex;
 
-			> a {
+			>a {
 				margin-right: 10px;
 
 				&:last-of-type {
